[gd_scene load_steps=3 format=3 uid="uid://8tv1bjcuwxq2"]

[ext_resource type="PackedScene" uid="uid://ciuhkq03lxe2v" path="res://StatsScreen.tscn" id="1_ckycu"]
[ext_resource type="Script" uid="uid://njicts2v2wjf" path="res://loot.gd" id="1_tdn7b"]

[node name="Loot" type="Node2D"]
script = ExtResource("1_tdn7b")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 720.0
offset_bottom = 1600.0
color = Color(0.176471, 0.176471, 0.176471, 0)
metadata/_edit_use_anchors_ = true

[node name="PlayerTurn" type="Control" parent="ColorRect"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="Take" type="Button" parent="ColorRect/PlayerTurn"]
layout_mode = 1
anchors_preset = -1
anchor_left = -8.6
anchor_top = 2.2
anchor_right = 6.175
anchor_bottom = 4.225
offset_left = 376.0
offset_top = 824.0
offset_right = 441.0
offset_bottom = 855.0
text = "Take"
metadata/_edit_use_anchors_ = true

[node name="Skip" type="Button" parent="ColorRect/PlayerTurn"]
layout_mode = 1
anchors_preset = -1
anchor_left = -8.6
anchor_right = 6.0
anchor_bottom = 2.025
offset_left = 376.0
offset_top = 1040.0
offset_right = 448.0
offset_bottom = 1071.0
text = "Skip"
metadata/_edit_use_anchors_ = true

[node name="Loot" type="ColorRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.055
anchor_bottom = 0.08
offset_left = 16.0
offset_top = 64.0
offset_right = 704.0
offset_bottom = 472.0
color = Color(0.76662, 0.76662, 0.76662, 1)
metadata/_edit_use_anchors_ = true

[node name="ItemStats" type="RichTextLabel" parent="ColorRect/Loot"]
layout_mode = 0
offset_left = 24.0
offset_right = 344.0
offset_bottom = 448.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_font_sizes/mono_font_size = 28
theme_override_font_sizes/normal_font_size = 28
vertical_alignment = 1

[node name="WpnStats" type="RichTextLabel" parent="ColorRect/Loot"]
layout_mode = 0
offset_left = 344.0
offset_right = 664.0
offset_bottom = 448.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_font_sizes/mono_font_size = 28
theme_override_font_sizes/normal_font_size = 28
vertical_alignment = 1

[node name="StatsScreen" parent="ColorRect" instance=ExtResource("1_ckycu")]
position = Vector2(0, 640)

[connection signal="pressed" from="ColorRect/PlayerTurn/Take" to="." method="_on_take_pressed"]
[connection signal="pressed" from="ColorRect/PlayerTurn/Skip" to="." method="_on_skip_pressed"]
